# flipper-spectrum-defense-companion

./: Makefile  README.md  pyproject.toml  requirements.txt
config/: config.yaml  logging.yaml
config/profiles/: demo_indoor.yaml  field_patrol.yaml  lab_debug.yaml
examples/: cli_recipes.md  quickstart_demo.md  wiring_pi_to_flipper.md
flipper/: README.md
flipper/app/: CMakeLists.txt  application.c
scripts/: export_ir_rf_examples.py  install_linux.sh  install_macos.sh  install_windows.ps1  setup_flipper_toolchain.sh  udev-rtl-sdr.rules
src/: alert_manager.py  config_loader.py  firewall_listener.py  main.py  spectrum_monitor.py  utils.py
src/alerts/: animation_led.py  flipper_gpio.py  flipper_uart.py  log_event.py  sound_local.py  webhook.py
src/detectors/: burst_detector.py  changepoint.py  energy_detector.py  spectral_kurtosis.py
src/devices/: file_source.py  hackrf_source.py  rtl_tcp_source.py  rtlsdr_source.py
src/schemas/: config.py  event.py
system/: spectrumd.env  spectrumd.service
tests/: test_alert_routing.py  test_config_loader.py  test_energy_detector.py
tests/data/: sample_burst.npy  sample_cw.npy
